# indian-hc-drafting-mcpb

./: README.md  SECURITY.md  manifest.json  pyproject.toml
.github/: CODE_REVIEW_SETUP.md
.github/workflows/: ai-code-review.yml
SAMPLE-CASES/: README.md
SAMPLE-CASES/synthetic-caste-cert-quashing-civil-wp/: 01-impugned-sdm-order-2026-03-15.docx  02-petitioner-representation-2026-04-10.docx  case-facts-background.md
agents/drafter/: drafter.md
agents/format/: format.md
agents/overseer/: overseer.md
agents/reader/: reader.md
agents/refiner/: refiner.md
agents/verifier/: verifier.md
bench-config/: bench-config-template.md
bench-config/exemplars/: allahabad-hc.md  andhra-pradesh-hc.md  bombay-hc-aurangabad.md  bombay-hc-goa.md  bombay-hc-nagpur.md  bombay-hc-principal-mumbai.md  bombay-hc.md  calcutta-hc.md  chhattisgarh-hc.md  delhi-hc.md  gauhati-hc.md  gujarat-hc.md  himachal-pradesh-hc.md  jammu-kashmir-ladakh-hc.md  jharkhand-hc.md  karnataka-hc.md  kerala-hc.md  madhya-pradesh-hc.md  madras-hc.md  manipur-hc.md  meghalaya-hc.md  orissa-hc.md  patna-hc.md  punjab-haryana-hc.md  rajasthan-hc.md  sikkim-hc.md  telangana-hc.md  tripura-hc.md  uttarakhand-hc.md
server/: main.py
skills/_drafting_common/: SKILL.md
skills/_hc_pleading_base/: FORMATTING.md  REFERENCE-DOCX-CUSTOMISATION.md  SKILL.md  reference.docx
skills/anticipatory-bail-draft/: SKILL.md  format-from-user.md
skills/application-482-draft/: SKILL.md  format-from-user.md
skills/bail-draft/: SKILL.md
skills/civil-wp-draft/: SKILL.md  format-from-user.md
(+15 files in other folders)
