[project]
name = "wolfgang-indian-hc-drafting"
version = "0.1.2"
description = "MCPB Desktop Extension for drafting pleadings before any High Court of India."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Wolfgang Rush", email = "wolfgangrush@gmail.com" }
]
dependencies = [
    "mcp[cli]>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
